fixed header and updated so it renders better on mobile

--- a/public/stylesheets/sass/layout.sass
+++ b/public/stylesheets/sass/layout.sass
@@ -22,7 +22,6 @@ body
 
 .leaf-image
   display: inline-block
-  margin-left: 32%
   padding: 0
   img
     margin-top: 26px
